--- a/src/app/Paginas/LadoAdmin/Formulas/listado-formula/listado-formula.component.html
+++ b/src/app/Paginas/LadoAdmin/Formulas/listado-formula/listado-formula.component.html
@@ -1,1 +1,45 @@
-<p>listado-formula works!</p>
+<div class="container TextWhite rounded-2 ff mtt">
+    <div class="row">
+        <div class="col-4 col-sm-4 col-md-3 col-lg-3">
+            <h3 class="text-start py-3 mt-1">FORMULAS</h3>
+        </div>
+
+        <div class="col-8 col-sm-8 col-md-9 col-lg-9 text-start py-3">
+            <button class="btn btnCeleste" (click)="Agregar()" matTooltip="Nueva formula">NUEVO</button>
+        </div>
+    </div>
+    <hr />
+    <label class="mb-2" for="">BUSCAR</label>
+    <div class="row py-3 mtc-5 mb-4" style="text-align: center">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+            <input type="text" class="form-control inputColor" [(ngModel)]="filtro" (keyup)="filtrarTabla()"
+                matTooltip="Filtrar" />
+        </div>
+        <div class="col-md-6 col-lg-6">
+        </div>
+
+    </div>
+    <div class="table-responsive">
+        <table class="table table-responsive mtc-5 TextWhite" matSort (matSortChange)="sortData($event)">
+            <thead class="table mtc-5 table-sm TextWhite">
+                <tr>
+                    <th mat-sort-header="nombreProd" scope="col">PRODUCTO</th>
+                    <th mat-sort-header="nombreMatP" scope="col">MATERIA PRIMA</th>
+                    <th mat-sort-header="cantidadMateriaPrima" scope="col">CANT. MATERIA PRIMA</th>
+                    <th scope="col">FUNCIONES</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let form of listado">
+                    <td>{{ form.nombreProd }}</td>
+                    <td>{{ form.nombreMatP }}</td>
+                    <td class="text-start">{{form.cantidadMateriaPrima}} Grs.</td>
+                    <td>
+                        <i type="button" class="fa-solid fa-pencil me-3 iconoLista" (click)="Modificar(form.idFormula)"
+                            matTooltip="Modificar formula"></i>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
