--- a/src/app/Paginas/LadoCliente/inicio-cliente/inicio-cliente.component.html
+++ b/src/app/Paginas/LadoCliente/inicio-cliente/inicio-cliente.component.html
@@ -1,30 +1,30 @@
-<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExampleInterval" class="carousel slide " data-bs-ride="carousel">
     <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="4000">
-            <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1683676060/FrancaSW/larga_BLANCO_hbxqvj.png"
+        <div class="carousel-item active" data-bs-interval="10000">
+            <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1683773738/FrancaSW/larga_bochini_2_opcion_blue_qijl3y.png"
                 class="d-block w-100" alt="...">
         </div>
-        <div class="carousel-item active" data-bs-interval="4000">
-            <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1683676059/FrancaSW/larga_GRIS_yc4qji.png"
+        <div class="carousel-item active" data-bs-interval="10000">
+            <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1683776031/FrancaSW/letras_figvhb.png"
                 class="d-block w-100" alt="...">
         </div>
-        <div class="carousel-item active" data-bs-interval="4000">
-            <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1683675423/FrancaSW/larga_1_ne9esc.png"
+        <div class="carousel-item active" data-bs-interval="10000">
+            <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1683776032/FrancaSW/contacto_deq9le.png"
                 class="d-block w-100" alt="...">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="carousel-control-prev-icon " aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="carousel-control-next-icon " aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
 </div>
 
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-    <path fill="#1b345d" fill-opacity="1"
+    <path fill="#fff" fill-opacity="1"
         d="M0,224L80,224C160,224,320,224,480,192C640,160,800,96,960,106.7C1120,117,1280,203,1360,245.3L1440,288L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z">
     </path>
 </svg>
