--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
+::-webkit-scrollbar {
+    background-color: #fff;
+    width: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #5192FF;
+}
+
 .BackgroundAzul {
-    background-color: #162B4E;
+    /* background-color: #162B4E; */
+    background-color: rgb(22, 43, 78);
 }
 
 .BackgroundAzulCard {
@@ -140,7 +150,8 @@ select.ng-valid {
     z-index: -1;
 
 }
-.bold{
+
+.bold {
     font-weight: bolder;
 }
 
