--- a/src/app/Paginas/LadoCliente/inicio-cliente/inicio-cliente.component.html
+++ b/src/app/Paginas/LadoCliente/inicio-cliente/inicio-cliente.component.html
@@ -1,26 +1,35 @@
 <div id="carouselExampleInterval" class="carousel slide " data-bs-ride="carousel">
+
     <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+            <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1684162890/FrancaSW/Letras_bhnirc.png"
+                class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item active" data-bs-interval="10000">
+            <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1684162890/FrancaSW/Contactos_pmknyj.png"
+                class="d-block w-100" alt="...">
+        </div>
+
         <div class="carousel-item active" data-bs-interval="10000">
             <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1683773738/FrancaSW/larga_bochini_2_opcion_blue_qijl3y.png"
                 class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item active" data-bs-interval="10000">
-            <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1683776031/FrancaSW/letras_figvhb.png"
-                class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item active" data-bs-interval="10000">
-            <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1683776032/FrancaSW/contacto_deq9le.png"
-                class="d-block w-100" alt="...">
+
         </div>
     </div>
+
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon " aria-hidden="true"></span>
+        <span class="carousel-control-prev-icon" aria-hidden="true">
+            <i class="fa-solid fa-angle-left"></i>
+        </span>
         <span class="visually-hidden">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-        <span class="carousel-control-next-icon " aria-hidden="true"></span>
+        <span class="carousel-control-next-icon" aria-hidden="true">
+            <i class="fa-solid fa-angle-right"></i>
+        </span>
         <span class="visually-hidden">Next</span>
     </button>
+
 </div>
 
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -52,19 +61,23 @@
     <div class="row">
         <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
             <h1 class="text-start">DETALLES TÉCNICOS</h1>
-            <p class="text-justify">La fabricación de estas bochas se realiza bajo un riguroso control de temperatura y tiempo de cocción,
+            <p class="text-justify">La fabricación de estas bochas se realiza bajo un riguroso control de temperatura y
+                tiempo de cocción,
                 así como también un control mecánico en su acabado, lo que garantiza un producto de alta calidad con un
                 índice de fallas prácticamente nulo.</p>
 
-            <p class="text-justify"> El control automático de la temperatura y el tiempo de cocción aseguran una cocción uniforme en el
+            <p class="text-justify"> El control automático de la temperatura y el tiempo de cocción aseguran una cocción
+                uniforme en el
                 interior y exterior de la bocha, lo que es fundamental para obtener una dureza óptima y evitar defectos
                 que puedan resultar en roturas totales o parciales de la bocha. Además, esto permite minimizar el
                 desgaste.
             </p>
-            <p class="text-justify"> El acabado mecánico, junto con un control manual, se realiza de forma individual para cada bocha, lo que
+            <p class="text-justify"> El acabado mecánico, junto con un control manual, se realiza de forma individual
+                para cada bocha, lo que
                 asegura que ninguna de ellas tenga algún tipo de defecto antes de salir a la venta.
             </p>
-            <p class="text-justify"> El material utilizado para su fabricación es un plástico termo fijo, resistente e inalterable siempre y
+            <p class="text-justify"> El material utilizado para su fabricación es un plástico termo fijo, resistente e
+                inalterable siempre y
                 cuando se le dé el tratamiento adecuado.</p>
         </div>
         <div class="d-none d-lg-block col-md-12 col-lg-6 col-xl-6 mt-5 py-3">
@@ -82,14 +95,16 @@
         </div>
         <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
             <h1 class="text-end">NUESTRA EMPRESA</h1>
-            <p  class="text-justify">Bochas Franca SRL se inició en el negocio de la fabricación de bochas en abril de 2001, fundada por un
+            <p class="text-justify">Bochas Franca SRL se inició en el negocio de la fabricación de bochas en abril de
+                2001, fundada por un
                 equipo
                 de expertos con años de experiencia en la materia. Para comenzar, se adquirió toda la maquinaria nueva y
                 las matrices necesarias para su fabricación. Desde entonces, se ha prestado una atención minuciosa a
                 cada detalle del proceso de producción, lo que ha garantizado un índice de fallas de fabricación
                 prácticamente nulo. De hecho, de cada 10 mil bochas fabricadas, solo 1 es devuelta.</p>
 
-            <p  class="text-justify"> Como resultado de este alto estándar de calidad, nuestro producto viene con una garantía de 12 meses
+            <p class="text-justify"> Como resultado de este alto estándar de calidad, nuestro producto viene con una
+                garantía de 12 meses
                 contra fallas de fabricación. Nos esforzamos por mantener esta seriedad y calidad a largo plazo, lo que
                 se traduce en una excelente reputación y publicidad para nuestra empresa.</p>
         </div>
