--- a/src/app/Paginas/LadoAdmin/OrdenesProduccion/modificar-ordenes-produccion/modificar-ordenes-produccion.component.html
+++ b/src/app/Paginas/LadoAdmin/OrdenesProduccion/modificar-ordenes-produccion/modificar-ordenes-produccion.component.html
@@ -1,13 +1,13 @@
 <div class="container TextWhite mtt ff shadow-lg rounded-2">
-    <form #f="ngForm" (ngSubmit)="registrarOrden(f)" class="container">
-        <h3 class="text-start py-3">NUEVA ORDEN DE PRODUCCIÓN</h3>
+    <form #f="ngForm" (ngSubmit)="actualizarOrden(f)" class="container">
+        <h3 class="text-start py-3">MODIFICAR ORDEN DE PRODUCCIÓN</h3>
         <hr />
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
                 <div class="form-group">
                     <label for="">NÚMERO DE ORDEN</label>
                     <input type="text" class="form-control" [(ngModel)]="ordenProd.numeroOrden" #numeroOrden="ngModel"
-                        name="numeroOrden" required placeholder="Ingrese el número de orden" pattern="[0-9]*" />
+                        name="numeroOrden" required placeholder="Ingrese el número de orden" pattern="[0-9]*" disabled="" />
                     <div *ngIf="numeroOrden.invalid && (numeroOrden.dirty || numeroOrden.touched)">
                         <small class="text-danger">Por favor ingrese un número válido</small>
                     </div>
@@ -120,7 +120,7 @@
         <div class="row py-4">
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
                 <div class="">
-                    <button class="btn btn-success" type="submit" id=""  matTooltip="Generar orden">GENERAR</button>
+                    <button class="btn btn-success" type="submit" id=""  matTooltip="Modificar orden">MODIFICAR</button>
                 </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
