--- a/src/app/Paginas/LadoAdmin/Productos/listado-productos/listado-productos.component.html
+++ b/src/app/Paginas/LadoAdmin/Productos/listado-productos/listado-productos.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="col-8 col-sm-8 col-md-9 col-lg-9 text-start py-3">
-      <button class="btn btnCeleste" (click)="agregar()" matTooltip="Nuevo producto">NUEVO</button>
+      <button class="btn btnCeleste ms-5" (click)="agregar()" matTooltip="Nuevo producto">NUEVO</button>
     </div>
   </div>
   <hr />
@@ -16,6 +16,11 @@
         matTooltip="Filtrar" />
     </div>
     <div class="col-md-6 col-lg-6">
+      <button class="btn btnA1 me-1 mt-1" (click)="color()" matTooltip="Color">COLOR</button>
+      <button class="btn btnA2 me-1 mt-1" (click)="disenio()" matTooltip="Diseño">DISEÑO</button>
+      <button class="btn btnA3 me-1 mt-1" (click)="medida()" matTooltip="Medida">MEDIDA</button>
+      <button class="btn btnA4 me-1 mt-1" (click)="precio()" matTooltip="Precio">PRECIO</button>
+      <button class="btn btnA5 me-1 mt-1" (click)="tipo()" matTooltip="Tipo de producto">TIPO</button>
     </div>
 
   </div>
